src/objects/Business_Park__c.object
<CustomObject>
    <description>Object to store Business Parks. Business Parks are managed manually in Salesforce, with Oracle being the master.</description>
    <fields>
        <fullName>Business_Park_Code__c</fullName>
        <externalId>true</externalId>
        <label>Business Park Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Park_Full_Name__c</fullName>
        <label>Business Park Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Park_Yardi__c</fullName>
        <externalId>true</externalId>
        <label>Business Park (Yardi)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cluster_Name__c</fullName>
        <label>Cluster Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Education Cluster</fullName>
                </value>
                <value>
                    <fullName>ETD</fullName>
                </value>
                <value>
                    <fullName>ICT Cluster</fullName>
                </value>
                <value>
                    <fullName>Industrial Cluster</fullName>
                </value>
                <value>
                    <fullName>Media Cluster</fullName>
                </value>
                <value>
                    <fullName>Science Cluster</fullName>
                </value>
                <value>
                    <fullName>TECOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Park</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Park_Yardi__c</columns>
        <columns>Business_Park_Full_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Park Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Parks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>